# cvc

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  NOTICE  README.md  compose.yaml  install-cvm-plugin.sh  plugin.sh
cvm-plugin/: cvc.sh
lore/: codex-claude-gateway-plan.md
migrations/: 0001_init.sql
src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  oauth.rs  openai.rs  protocol.rs  server.rs  stream.rs  translate.rs
tests/: local_gateway.rs
