[package]
name = "cvc"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Claude Code to Codex gateway"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures = "0.3"
http = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "uuid", "chrono"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["catch-panic", "compression-gzip", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
